src/tests/fixtures/field_definitions/ReferenceUndefinedType.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class Query {
  /** @gqlField */
  somePropertyField: SomeUndefienedType;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/ReferenceUndefinedType.ts:4:22 - error: This type is not a valid GraphQL type. Did you mean to annotate it's definition with `/** @gqlType */` or `/** @gqlScalar */`?

4   somePropertyField: SomeUndefienedType;
                       ~~~~~~~~~~~~~~~~~~
